<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:title="Sort"
        app:showAsAction="ifRoom"
        android:icon="@drawable/logo">
        <group
            android:checkableBehavior="single"
            >
            <item
                android:title="@string/now_playing"
                android:id="@+id/now_playing_menu"
                
                app:showAsAction="never" />
            <item
                android:title="@string/most_popular"
                android:id="@+id/popular_menu"
                app:showAsAction="never" />
            <item
                android:title="@string/Top_rated"
                android:id="@+id/top_rated_menu"
                app:showAsAction="never" />
             <item
                 android:title="@string/my_favourites"
                 android:id="@+id/favourites_menu"
                 app:showAsAction="never" />
        </group>
    </item>

</menu>