<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/FrameLayout"
    android:background="@drawable/border"
    tools:context="com.example.ashut.popularmoviespart1.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:id="@+id/scrollView">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/background_poster"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/background"
            android:scaleType="fitXY" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:shadowRadius="25"
            android:layout_marginTop="230dp"
            android:layout_marginLeft="250dp"
            android:textOn=""
            android:checked="false"
            android:textOff=""
            android:layout_gravity="right"
            android:background="@drawable/check"/>

        <ImageView
            android:id="@+id/poster"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_gravity="start"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="205dp"
            android:contentDescription="@string/poster" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_below="@id/background_poster"
            android:layout_margin="5dp"
            android:layout_marginBottom="0dp"
            android:layout_toRightOf="@id/poster"
            android:gravity="center_horizontal|center_vertical|center"
            android:paddingEnd="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingStart="15dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@id/tv_title"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"

            android:layout_toRightOf="@id/poster"
            android:gravity="center"
            android:text="@string/release_date"
            android:textAlignment="center"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tv_vote_avg"
            android:layout_width="wrap_content"
            android:layout_height="20dp"

            android:layout_below="@id/tv_release_date"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"

            android:layout_toRightOf="@id/poster"
            android:gravity="center"
            android:text="@string/avg_vote"
            android:textAlignment="center"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/plot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/poster"
            android:layout_margin="30dp"
            android:text="@string/overview"
            android:textColor="#000000"
            android:textSize="26sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/plot"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="25dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="25dp"
            android:layout_marginStart="35dp"
            android:gravity="start"
            android:paddingBottom="25dp"
            android:textAlignment="viewStart"
            android:textColor="#000000" />


        <TextView
            android:id="@+id/tv_trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_overview"
            android:layout_margin="30dp"
            android:text="Trailers"
            android:textColor="#000000"
            android:textSize="26sp"
            android:textStyle="bold" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/TrailerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_trailers"

            />

        <TextView
            android:id="@+id/tv_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TrailerView"
            android:layout_margin="30dp"
            android:text="User Reviews"
            android:textColor="#000000"
            android:textSize="26sp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/ReviewsView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/tv_reviews"
            android:layout_alignLeft="@+id/poster"
            android:layout_alignStart="@+id/poster"
            android:layout_marginTop="18dp" />

    </RelativeLayout>

    </ScrollView>
    <ProgressBar
        android:id="@+id/detail_loader"
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_detail_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="45dp"
        android:text="@string/noConnection"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="46sp"
        android:visibility="invisible" />

</FrameLayout>
